--- a/tests-happy/pom.xml
+++ b/tests-happy/pom.xml
@@ -11,6 +11,7 @@
 
     <artifactId>tests-happy</artifactId>
     <name>Happy Tests</name>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
@@ -23,8 +24,14 @@
             <artifactId>appium-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
     </dependencies>
 
-
+    <build>
+        <resources>
+            <resource>
+                <directory>src/test/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+    </build>
 </project>
