--- a/jgolem-core/pom.xml
+++ b/jgolem-core/pom.xml
@@ -15,34 +15,26 @@
     <packaging>jar</packaging>
 
     <dependencies>
+        <!-- Selenium 2 -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>2.34.0</version>
         </dependency>
 
-        <!-- Configuration Settings -->
+        <!-- Apapche commons configuration settings -->
         <dependency>
             <groupId>commons-configuration</groupId>
             <artifactId>commons-configuration</artifactId>
             <version>1.7</version>
         </dependency>
 
-        <!-- Testing libraries -->
+        <!-- TestNG -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>6.8.5</version>
         </dependency>
     </dependencies>
-
-    <build>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
-    </build>
 
 </project>
