--- a/jgolem-core/pom.xml
+++ b/jgolem-core/pom.xml
@@ -22,7 +22,7 @@
             <version>2.34.0</version>
         </dependency>
 
-        <!-- Apapche commons configuration settings -->
+        <!-- Apache commons configuration settings -->
         <dependency>
             <groupId>commons-configuration</groupId>
             <artifactId>commons-configuration</artifactId>
