--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,6 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>jgolem-core</module>
-        <module>tests-google</module>
-        <module>pageobjects-google</module>
-        <module>appium-core</module>
-        <module>screenobjects-happy</module>
-        <module>tests-happy</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -22,19 +17,50 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <versions.selenium>2.34.0</versions.selenium>
+        <versions.commons-configuration>1.7</versions.commons-configuration>
+        <versions.testng>6.8.7</versions.testng>
+        <versions.log4j>2.0-beta8</versions.log4j>
     </properties>
 
+
     <!-- Apache Log4J v2 -->
+
     <dependencies>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>2.0-beta8</version>
+            <version>${versions.log4j}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.0-beta8</version>
+            <version>${versions.log4j}</version>
         </dependency>
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <!-- Selenium 2 -->
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-java</artifactId>
+                <version>${versions.selenium}</version>
+            </dependency>
+
+            <!-- Apache commons configuration settings -->
+            <dependency>
+                <groupId>commons-configuration</groupId>
+                <artifactId>commons-configuration</artifactId>
+                <version>${versions.commons-configuration}</version>
+            </dependency>
+
+            <!-- TestNG -->
+            <dependency>
+                <groupId>org.testng</groupId>
+                <artifactId>testng</artifactId>
+                <version>${versions.testng}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
