Remove global state, use guice, and reorganize project.

--- a/jgolem/jgolem-core/pom.xml
+++ b/jgolem/jgolem-core/pom.xml
@@ -27,6 +27,12 @@
             <artifactId>commons-configuration</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>3.0</version>
+        </dependency>
+
         <!-- TestNG -->
         <dependency>
             <groupId>org.testng</groupId>
