--- a/jgolem/pom.xml
+++ b/jgolem/pom.xml
@@ -17,10 +17,11 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <versions.selenium>2.34.0</versions.selenium>
+        <versions.selenium>2.42.2</versions.selenium>
         <versions.commons-configuration>1.7</versions.commons-configuration>
         <versions.testng>6.8.7</versions.testng>
         <versions.log4j>2.0-beta8</versions.log4j>
+        <versions.logback>1</versions.logback>
     </properties>
 
 
