--- a/jgolem_test/pageobjects-google/pom.xml
+++ b/jgolem_test/pageobjects-google/pom.xml
@@ -5,9 +5,12 @@
 
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.prototest.jgolem</groupId>
     <artifactId>pageobjects-google</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <name>Google Page Objects</name>
     <packaging>jar</packaging>
+
 
     <dependencies>
         <dependency>
