--- a/jgolem_test/tests-google/pom.xml
+++ b/jgolem_test/tests-google/pom.xml
@@ -8,6 +8,12 @@
     <name>Google Tests</name>
     <packaging>jar</packaging>
 
+    <parent>
+        <artifactId>jgolem_test</artifactId>
+        <groupId>com.prototest.jgolem</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <dependencies>
         <dependency>
             <groupId>com.prototest.jgolem</groupId>
