--- a/pom.xml
+++ b/pom.xml
@@ -4,21 +4,22 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.prototest.jgolem</groupId>
-    <artifactId>jgolem-project-parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>jgolem</module>
-        <module>jgolem_test/pageobjects-google</module>
-        <module>jgolem_test/tests-google</module>
-    </modules>
-    <packaging>pom</packaging>
-
     <name>JGolem Parent Pom</name>
     <description>A mavenised Selenium 2 (WebDriver) test framework</description>
+
+    <artifactId>jgolem-project-parent</artifactId>
+    <groupId>com.prototest.jgolem</groupId>
+    <version>1.0-SNAPSHOT</version>
+
+    <packaging>pom</packaging>
+
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <modules>
+        <module>jgolem</module>
+        <module>jgolem_test</module>
+    </modules>
 </project>
