--- a/jgolem/pom.xml
+++ b/jgolem/pom.xml
@@ -4,9 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.prototest.jgolem</groupId>
     <artifactId>jgolem-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <parent>
+        <groupId>com.prototest.jgolem</groupId>
+        <artifactId>jgolem-project-parent</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modules>
         <module>jgolem-core</module>
     </modules>
@@ -20,16 +24,36 @@
         <versions.selenium>2.43.0</versions.selenium>
         <versions.commons-configuration>1.7</versions.commons-configuration>
         <versions.testng>6.8.7</versions.testng>
-        <versions.logback>1.1.2</versions.logback>
+        <versions.log4j>2.0.2</versions.log4j>
     </properties>
-
-
 
     <dependencies>
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>${versions.logback}</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.2.2</version>
         </dependency>
     </dependencies>
 
