--- a/jgolem_test/pageobjects-google/pom.xml
+++ b/jgolem_test/pageobjects-google/pom.xml
@@ -5,11 +5,15 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.prototest.jgolem</groupId>
     <artifactId>pageobjects-google</artifactId>
-    <version>1.0-SNAPSHOT</version>
     <name>Google Page Objects</name>
     <packaging>jar</packaging>
+
+    <parent>
+        <artifactId>jgolem_test</artifactId>
+        <groupId>com.prototest.jgolem</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
 
     <dependencies>
