--- a/jgolem/jgolem-core/pom.xml
+++ b/jgolem/jgolem-core/pom.xml
@@ -27,6 +27,7 @@
             <artifactId>commons-configuration</artifactId>
         </dependency>
 
+        <!-- Google Guice -->
         <dependency>
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
