--- a/jgolem/pom.xml
+++ b/jgolem/pom.xml
@@ -6,11 +6,13 @@
 
     <artifactId>jgolem-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <parent>
         <groupId>com.prototest.jgolem</groupId>
         <artifactId>jgolem-project-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+
     <modules>
         <module>jgolem-core</module>
     </modules>
@@ -27,58 +29,79 @@
         <versions.log4j>2.0.2</versions.log4j>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>2.0.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.0.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>2.2.2</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.2.2</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
-            <version>2.2.2</version>
-        </dependency>
-    </dependencies>
 
     <dependencyManagement>
         <dependencies>
+            <!-- Log4J -->
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>2.0.2</version>
+            </dependency>
+            <!-- Jackson-Core -->
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>2.2.2</version>
+            </dependency>
             <!-- Selenium 2 -->
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
                 <artifactId>selenium-java</artifactId>
                 <version>${versions.selenium}</version>
             </dependency>
-
             <!-- Apache commons configuration settings -->
             <dependency>
                 <groupId>commons-configuration</groupId>
                 <artifactId>commons-configuration</artifactId>
                 <version>${versions.commons-configuration}</version>
             </dependency>
-
             <!-- TestNG -->
             <dependency>
                 <groupId>org.testng</groupId>
                 <artifactId>testng</artifactId>
                 <version>${versions.testng}</version>
             </dependency>
+            <!-- ReportNG -->
+            <dependency>
+                <groupId>org.uncommons</groupId>
+                <artifactId>reportng</artifactId>
+                <version>1.1.2</version>
+                <scope>test</scope>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.testng</groupId>
+                        <artifactId>testng</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
         </dependencies>
     </dependencyManagement>
+
+<build>
+    <!-- configure the surefire plugin to use ReportNG listeners -->
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.16</version>
+            <configuration>
+                <systemPropertyVariables>
+                    <org.uncommons.reportng.escape-output>false</org.uncommons.reportng.escape-output>
+                </systemPropertyVariables>
+                <properties>
+                    <property>
+                        <name>usedefaultlisteners</name>
+                        <value>false</value>
+                    </property>
+                    <property>
+                        <name>listener</name>
+                        <value>org.uncommons.reportng.HTMLReporter, org.uncommons.reportng.JUnitXMLReporter</value>
+                    </property>
+                </properties>
+                <reportsDirectory>${project.basedir}/target/</reportsDirectory>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 </project>
