--- a/jgolem/pom.xml
+++ b/jgolem/pom.xml
@@ -26,23 +26,26 @@
         <versions.selenium>2.43.0</versions.selenium>
         <versions.commons-configuration>1.7</versions.commons-configuration>
         <versions.testng>6.8.7</versions.testng>
+        <versions.reportng>1.1.4</versions.reportng>
         <versions.log4j>2.0.2</versions.log4j>
+        <versions.jacksonCore>2.2.2</versions.jacksonCore>
+        <versions.guice>3.0</versions.guice>
     </properties>
 
 
     <dependencyManagement>
         <dependencies>
+            <!-- Log4j -->
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-core</artifactId>
                 <version>${versions.log4j}</version>
             </dependency>
-
             <!-- Jackson-Core -->
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-core</artifactId>
-                <version>2.2.2</version>
+                <version>#{versions.jacksonCore}</version>
             </dependency>
             <!-- Selenium 2 -->
             <dependency>
@@ -56,6 +59,12 @@
                 <artifactId>commons-configuration</artifactId>
                 <version>${versions.commons-configuration}</version>
             </dependency>
+            <!-- Google Guice -->
+            <dependency>
+                <groupId>com.google.inject</groupId>
+                <artifactId>guice</artifactId>
+                <version>${versions.guice}</version>
+            </dependency>
             <!-- TestNG -->
             <dependency>
                 <groupId>org.testng</groupId>
@@ -66,7 +75,7 @@
             <dependency>
                 <groupId>org.uncommons</groupId>
                 <artifactId>reportng</artifactId>
-                <version>1.1.2</version>
+                <version>${versions.reportng}</version>
                 <scope>test</scope>
                 <exclusions>
                     <exclusion>
@@ -78,30 +87,5 @@
         </dependencies>
     </dependencyManagement>
 
-<build>
-    <!-- configure the surefire plugin to use ReportNG listeners -->
-    <plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.16</version>
-            <configuration>
-                <systemPropertyVariables>
-                    <org.uncommons.reportng.escape-output>false</org.uncommons.reportng.escape-output>
-                </systemPropertyVariables>
-                <properties>
-                    <property>
-                        <name>usedefaultlisteners</name>
-                        <value>false</value>
-                    </property>
-                    <property>
-                        <name>listener</name>
-                        <value>org.uncommons.reportng.HTMLReporter, org.uncommons.reportng.JUnitXMLReporter</value>
-                    </property>
-                </properties>
-                <reportsDirectory>${project.basedir}/target/</reportsDirectory>
-            </configuration>
-        </plugin>
-    </plugins>
-</build>
+
 </project>
