--- a/jgolem_test/tests-google/pom.xml
+++ b/jgolem_test/tests-google/pom.xml
@@ -26,33 +26,12 @@
             <artifactId>pageobjects-google</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
-        <!-- TestNG/ReportNG and dependencies for them -->
         <dependency>
             <groupId>org.uncommons</groupId>
             <artifactId>reportng</artifactId>
-            <version>1.1.2</version>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.testng</groupId>
-                    <artifactId>testng</artifactId>
-                </exclusion>
-            </exclusions>
+            <version>1.1.4</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.google.inject</groupId>
-            <artifactId>guice</artifactId>
-            <version>3.0</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.14</version>
-        </dependency>
     </dependencies>
 
     <build>
@@ -62,6 +41,32 @@
                 <filtering>true</filtering>
             </resource>
         </resources>
+
+        <!-- configure the surefire plugin to use ReportNG listeners -->
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.16</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <org.uncommons.reportng.escape-output>false</org.uncommons.reportng.escape-output>
+                    </systemPropertyVariables>
+                    <properties>
+                        <property>
+                            <name>usedefaultlisteners</name>
+                            <value>false</value>
+                        </property>
+                        <property>
+                            <name>listener</name>
+                            <value>org.uncommons.reportng.HTMLReporter, org.uncommons.reportng.JUnitXMLReporter</value>
+                        </property>
+                    </properties>
+                    <reportsDirectory>${project.basedir}/herpderp/target/</reportsDirectory>
+
+                </configuration>
+            </plugin>
+        </plugins>
 
 
     </build>
