And all the other files I just forgot to add...

--- a/jgolem/jgolem-core/pom.xml
+++ b/jgolem/jgolem-core/pom.xml
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>org.uncommons</groupId>
             <artifactId>reportng</artifactId>
-            <scope>test</scope>
+            <!--<scope>test</scope>-->
             <exclusions>
                 <exclusion>
                     <groupId>org.testng</groupId>
